--- a/refreshed/medium.css
+++ b/refreshed/medium.css
@@ -64,7 +64,10 @@
 	margin-right: 1em;
 	background: midnightblue;
 	width: 15em;
-	display: none;
+	opacity: 0;
+	-webkit-transition: opacity .2s ease 0s;
+	transition: opacity .2s ease 0s;
+	z-index: 0;
 }
 
 #search input {
