--- a/refreshed/small.css
+++ b/refreshed/small.css
@@ -1,5 +1,14 @@
 /* anything 600px and under - phones */
 
+.fade-overlay-active {
+	opacity: .5 !important;
+	z-index: 10001; /* very high value to guarantee no elements on wikis will appear above it */
+}
+
+.fade-overlay-below-header {
+	z-index: 10000 !important; /* below header but above page content (used for search) */
+}
+
 #header {
 	height: 2.75em;
 }
@@ -31,6 +40,9 @@
 #sidebarshower {
 	display: block;
 }
+.sidebarshower-hidden {
+	right: 0 !important;
+}
 
 #sidebar-logo {
 	position: absolute;
@@ -61,17 +73,29 @@
 }
 
 #search {
-	margin-right: 0;
 	background: midnightblue;
 	width: 100%;
-	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	padding: .25em 0;
+	opacity: 0;
+	-webkit-transition: opacity .2s ease 0s;
+	transition: opacity .2s ease 0s;
+	z-index: 0;
+}
+#searchcloser {
+	display: block;
 }
 #search form {
-	margin-left: 1em;
+	margin-right: 3em;
+	margin-left: .25em;
 }
 #search input {
 	width: 100%;
-	font-size: 16pt; /* enlarging and preventing zoom on input on focus */
+	font-size: 18px;
+	float: left;
 }
 #searchshower {
 	display: block;
@@ -229,7 +253,8 @@
 	display: block;
 	border-top: 1px solid #eaeaea;
 	border-bottom: 1px solid #eaeaea;
-	margin: .5em .9em .75em .9em; /* left/right: 1em (#content padding-left) * .9em (#content font-size) */
+	margin: 0 .9em .75em .9em; /* left/right: 1em (#content padding-left) * .9em (#content font-size) */
+	overflow-y: hidden;
 }
 
 #smalltoolbox {
@@ -334,10 +359,11 @@
 }
 
 .suggestions {
-	top: 6.25em !important; /* 2.75em for the header, 3.5em for the search bar */
+	top: 2.75em !important;
 	left: 0 !important;
 	width: 100% !important;
 	font-size: 16px !important;
+	z-index: 10001 !important; /* place above #fade-overlay, which has z-index of 10000 because it has the .fade-overlay-below-header class */
 }
 .suggestions div {
 	font-size: 16pt;
